--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,7 @@
     <body>
         {% block body %}{% endblock %}
     </body>
+    <script src="https://cdn.tailwindcss.com"></script>
 
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
