--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,8 @@
         {% block body %}{% endblock %}
     </body>
     <script src="https://cdn.tailwindcss.com"></script>
-
+    <script src="https://unpkg.com/vue-tippy@4/dist/vue-tippy.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-tippy@4/dist/vue-tippy.min.js"></script>
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
